@@ -1,3 +1,7 @@
+2012-07-09  Albert Chu <chu11@llnl.gov>
+
+	* freeipmi.spec.in: Update w/ recent changes.
+	
 2012-07-06  Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/util/ipmi-sensor-util.c (ipmi_sensor_units_string):
